plugins/formal-verification/testData/diagnostics/no_contracts/henrikTesting/pureAnnotation.kt
import org.jetbrains.kotlin.formver.plugin.*

@Pure
@DumpExpEmbeddings
@NeverVerify
fun <!VIPER_TEXT!>average<!>(x: Int, y: Int) = (x+y)/2